# coarse_fine_slam

./: .gitmodules  README.md  first_trial.txt  run.sh
result/: stored_pose_info_2024_08_26_16_33_46.txt  stored_pose_info_2024_08_26_16_41_53.txt  stored_pose_info_2024_08_26_17_01_32.txt  stored_pose_info_2024_08_26_17_09_59.txt  stored_pose_info_2024_08_26_17_14_53.txt  stored_pose_info_2024_08_26_17_16_36.txt  stored_pose_info_2024_08_26_17_22_26.txt  stored_pose_info_2024_08_26_17_25_42.txt  stored_pose_info_2024_08_26_17_30_05.txt  stored_pose_info_2024_08_26_17_42_26.txt
src/coarse_fine_slam/: CMakeLists.txt  package.xml
src/coarse_fine_slam/config/: params.yaml
src/coarse_fine_slam/include/: main.hpp  parameters.hpp
src/coarse_fine_slam/include/coarse_fine_slam/helpers/: calc_helpers.hpp  visual_helper.hpp
src/coarse_fine_slam/include/coarse_fine_slam/helpers/preprocess/: imu.hpp  lidar.hpp  lidar_structs.hpp  merged_data.hpp
src/coarse_fine_slam/include/coarse_fine_slam/ros_1/: acquire_data.hpp  visualizer.hpp
src/coarse_fine_slam/include/coarse_fine_slam/state_estimation/: interface.hpp
src/coarse_fine_slam/include/coarse_fine_slam/state_estimation/helpers/: h_modeller.hpp  imu.hpp  kf.hpp  lidar.hpp  state.hpp
src/coarse_fine_slam/launch/: hub.launch  hub_debug.launch
src/coarse_fine_slam/rviz/: lio.rviz
src/coarse_fine_slam/src/: main.cpp  parameters.cpp
src/coarse_fine_slam/src/helpers/: calc_helpers.cpp  visual_helper.cpp
src/coarse_fine_slam/src/helpers/preprocess/: imu.cpp  lidar.cpp  merged_data.cpp
src/coarse_fine_slam/src/ros_1/: acquire_data.cpp  visualizer.cpp
src/coarse_fine_slam/src/state_estimation/: interface.cpp
src/coarse_fine_slam/src/state_estimation/helpers/: h_modeller.cpp  imu.cpp  kf.cpp  lidar.cpp  state.cpp
